[package]
name = "uvxl"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = { version = "0.3.0", optional = true }
wgpu = { version = "0.17.1", optional = true }
winit = { version = "0.28.7", optional = true }
anyhow = "1.0.75"
instant = "0.1.12"
rectangle-pack = { version = "0.4.2", optional = true }
log = "0.4.20"
pretty_env_logger = "0.5.0"
egui = { version = "0.23.0", optional = true }
cfg-if = "1.0.0"
tap = "1.0.1"
egui-wgpu = { version = "0.23.0", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.107"
bytemuck = "1.14.0"
glam = { version = "0.24.2", features = ["bytemuck", "serde"] }
dashmap = { version = "5.5.3", optional = true }
image = { version = "0.24.7", optional = true }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32.0", features = ["full"], optional = true }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-tungstenite = { version = "0.20.1", optional = true }
futures = { version = "0.3", optional = true }
futures-channel = { version = "0.3.28", optional = true }
futures-util = { version = "0.3.28", optional = true }
egui-winit = { version = "0.23.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.17.1", features = ["webgl"], optional = true }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Document", "Window", "Element", "HtmlElement", "WebSocket", "BinaryType", "MessageEvent", "Event", "ErrorEvent"]}
egui-winit = { version = "0.23.0", default-features = false, features = ["links"], optional = true }
js-sys = "0.3.64"

[features]
default = ["client"]
server = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures", "dep:futures-channel", "dep:futures-util", "dep:dashmap"]
client = ["dep:pollster", "dep:wgpu", "dep:winit", "dep:rectangle-pack", "dep:egui", "dep:egui-wgpu", "dep:egui-winit", "dep:image"]
